# LoFTR_SLAM_from_scratch

./: CMakeLists.txt
cmake_modules/: FindG2O.cmake
include/: Atlas.h  Converter.h  Frame.h  FrameDrawer.h  GeometricTools.h  KeyFrame.h  LoFTRMatcher.h  MLPnPsolver.h  Map.h  MapDrawer.h  MapPoint.h  Optimizer.h  SerializationUtils.h  Settings.h  System.h  Tracking.h  TwoViewReconstruction.h  Viewer.h
include/CameraModels/: GeometricCamera.h  KannalaBrandt8.h  Pinhole.h
src/: Atlas.cpp  CMakeLists.txt  Converter.cpp  Frame.cpp  FrameDrawer.cpp  KeyFrame.cpp  LoFTRMatcher.cpp  MLPnPsolver.cpp  Map.cpp  MapDrawer.cpp  MapPoint.cpp  Optimizer.cpp  Settings.cpp  System.cpp  Tracking.cpp  TwoViewReconstruction.cpp  Viewer.cpp
src/CameraModels/: KannalaBrandt8.cpp  Pinhole.cpp
test/: CMakeLists.txt  run_slam.cpp
